// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={90}
      createdAt={0}
      description="Banana"
      id="1"
      key="1"
      note=""
      tag="BLUE"
    />
    <ExpenseListItem
      amount={200}
      createdAt={-432000000}
      description="Apple"
      id="2"
      key="2"
      note=""
      tag="GREEN"
    />
    <ExpenseListItem
      amount={5000}
      createdAt={432000000}
      description="Pear"
      id="3"
      key="3"
      note=""
      tag="YELLOW"
    />
  </div>
</div>
`;

exports[`should render a empty ExpenseList 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        All expenses hiding behind filters
      </p>
    </div>
  </div>
</div>
`;
